# paperLLM

./: README.md  convert_specific_pdf_to_mmd.py  extract_iclr24_fewshot.py  pdf_files_part_1.txt
iclr24_8shot/: show_html_with_diff  show_revise_to_html.py
iclr24_8shot/4fH5ELoWFu/: intro.mmd  introduction.txt  note.json  paper.mmd  replies.json
iclr24_8shot/5o9G4XF1LI/: intro.mmd  introduction.txt  note.json  paper.mmd  replies.json  sentiment.json
iclr24_8shot/7gLfQT52Nn/: intro.mmd  introduction.txt  note.json  paper.mmd  replies.json  sentiment.json
iclr24_8shot/8pYNdmwGAO/: intro.mmd  (+4 more)
paperscore/: GuidelineHandler.py  LatexParser.py  PaperScore.py  main.py  prompt.py  prompt_gpt.py  pyproject.toml  revise.py
paperscore/pdf_parser/: README.md  postgres_handler.py  process_pdf.py  section_mapping.json  text_extraction.py
paperscore/pdf_parser/example_results/: 3534969.json  Dupin__V1 (4).json
paperscore/rules/rule-top-priority-core_rules_by_sections/: ABSTRACT.txt  BACKGROUND.txt  CONCLUSION.txt  EVALUATION.txt  INTRODUCTION.txt  RELATED WORK.txt  TECHNICAL_SECTION.txt  abstract.json
paperscore/src/: paper_matcher.py
paperscore/src/agent/: base.py
paperscore/src/context/: __init__.py  concurrent_task_manager.py
paperscore/src/tool/pdf/: extract_reference.py
rules/: Significant Change (Top Priority)-dedup-core-v1.txt  convert_ENTIRE_PAPER.txt  rule_abstract.txt  rule_background_relatedwork-refined.txt  rule_conclusion.txt  rule_entirepaper.txt  rule_evaluation.txt  rule_introduction.txt  rule_methodology-onerule.txt  rule_methodology.txt
(+53 files in other folders)
